tests/compile_fail/hold_borrow_to_long.stderr
error[E0597]: `root` does not live long enough
 --> tests/compile_fail/hold_borrow_to_long.rs:7:17
  |
5 |     let a = {
  |         - borrow later stored here
6 |         let root = unsafe { Root::new(&owner) };
7 |         let a = root.add(0);
  |                 ^^^^^^^^^^^ borrowed value does not live long enough
8 |         a.borrow(&owner)
9 |     };
  |     - `root` dropped here while still borrowed
